# webRTCGBOT

./: README.md  package-lock.json  readMe.txt
gbot-teleop/: package-lock.json  package.json
gbot-teleop/src/: App.css  App.tsx  WebRTC.tsx
gbot_ws/: compile_commands.json
gbot_ws/install/: local_setup.sh  setup.sh
gbot_ws/install/gbot_navigation/lib/gbot_navigation/: path_planner
gbot_ws/install/gbot_navigation/share/gbot_navigation/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
gbot_ws/install/gbot_navigation/share/gbot_navigation/cmake/: gbot_navigationConfig.cmake
gbot_ws/install/libdatachannel/lib/: libdatachannel.so.0.22
gbot_ws/install/libdatachannel/lib/cmake/LibDataChannel/: LibDataChannelConfigVersion.cmake  LibDataChannelTargets-noconfig.cmake
gbot_ws/install/libdatachannel/share/libdatachannel/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
gbot_ws/install/teleop/share/teleop/: package.sh
gbot_ws/log/: latest_build
gbot_ws/src/gbot_navigation/: .clangd  CMakeLists.txt  compile_commands.json
gbot_ws/src/gbot_navigation/include/gbot_navigation/: coordinates.hpp  object_subscriber.hpp
gbot_ws/src/gbot_navigation/src/: coordinates.cpp  main.cpp  object_subscriber.cpp
gbot_ws/src/teleop/: CMakeLists.txt  compile_commands.json
gbot_ws/src/teleop/include/teleop/: webrtc.hpp
gbot_ws/src/teleop/src/: image_subscriber.cpp  webrtc.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/teleop/share/ament_index/resource_index/parent_prefix_path/: teleop
install/teleop/share/teleop/: package.sh  package.xml
log/: latest_build
simulation/: .gitignore
simulation/Assets/: 1080p Render Texture.renderTexture  720p Render Texture.renderTexture
simulation/Assets/Input System/: InputActions.cs  InputActions.inputactions
simulation/Assets/Prefabs/Debris/: Test Debris.prefab
simulation/Assets/Resources/: ROSConnectionPrefab.prefab
simulation/Assets/Scenes/: AutonomyTest.unity  MinimalScene.unity  poolScene.unity
simulation/Assets/Scripts/: CameraFollow.cs  ScriptsAssembly.asmdef
simulation/Assets/Scripts/Autonomy Test/: AutonomyTest.asmdef  MotorController.cs  ObjectDetection.cs
simulation/Assets/Scripts/Controller/: CameraController.cs  ShipController.cs
simulation/Assets/Scripts/Debris/: DebrisAssembly.asmdef  DebrisBoundingBoxVisualiser.cs  DebrisCollector.cs  DebrisSpawner.cs
simulation/Assets/Scripts/Physics/Processing/: Submersion.cs
simulation/Assets/Settings/HDRPDefaultResources/: HDRenderPipelineAsset.asset  HDRenderPipelineGlobalSettings.asset  HdrpAsset.asset
simulation/ProjectSettings/: TagManager.asset
webrtc-signal-server/: index.js  package-lock.json  package.json
